Updates from ryan

--- a/app/views/home/schedule.html.erb
+++ b/app/views/home/schedule.html.erb
@@ -23,7 +23,7 @@
           text: 'Friday, Jan 10 [Arrival Day]'
       } %>
       <%= render partial: 'home/activity_deats', :locals => {
-          time: '10am - 11am',
+          time: '8pm - 10pm',
           title1: 'Welcome Concert',
           title2: '(pieces by Pitan, Gottschalk, Bullock, Eckl, and Pisaro)',
           is_concert: true,
