--- a/app/views/home/sections/_guest_artists_2020.html.erb
+++ b/app/views/home/sections/_guest_artists_2020.html.erb
@@ -80,7 +80,7 @@
         imageUrl: "2020/Ryan-Seward.jpg",
         name: "Ryan Seward",
         website: "https://ryansewardmusic.com/",
-        description: "Ryan Seward is a percussionist and composer based in Loveland, Colorado. His practice is rooted in concerns for communitarian ritual, group dynamics, place identity, infinitesimal perceptual phenomena, and performance, improvisation, and composition as sites of political and social praxis."
+        description: "Ryan Seward is a percussionist and composer based in Loveland, Colorado. His practice is rooted in concerns for communitarian ritual, group dynamics, place identity, production of space, and composition, improvisation, and performance as sites of social and political praxis."
     } %>
     <hr class="secondary">
     <%= render partial: 'home/sections/guest_artist_description', :locals => {
