--- a/app/views/home/schedule.html.erb
+++ b/app/views/home/schedule.html.erb
@@ -11,7 +11,6 @@
         </p>
         <p>
           please feel free to <a href="mailto:coincidence.festival@gmail.com">email us</a> if you have questions.
-
         </p>
         <hr class="primary">
       </div>
@@ -74,7 +73,7 @@
       } %>
       <%= render partial: 'home/activity_deats', :locals => {
           time: '11am - 1pm',
-          title1: 'General Open Discussion, Introduction to Festival, Etc.'
+          title1: 'General Open Discussion'
       } %>
       <%= render partial: 'home/activity_deats', :locals => {
           time: '1pm - 230pm',
@@ -96,7 +95,7 @@
       } %>
       <%= render partial: 'home/activity_deats', :locals => {
           time: '11am - 1pm',
-          title1: 'Group travel to Walden Pond'
+          title1: 'General Open Discussion'
       } %>
       <%= render partial: 'home/activity_deats', :locals => {
           time: '1pm - 230pm',
@@ -118,7 +117,7 @@
       } %>
       <%= render partial: 'home/activity_deats', :locals => {
           time: '11am - 1pm',
-          title1: 'Group travel to Walden Pond'
+          title1: 'General Open Discussion'
       } %>
       <%= render partial: 'home/activity_deats', :locals => {
           time: '1pm - 7pm (approx)',
@@ -162,7 +161,6 @@
       } %>
       <div class="row">
         <div class="col-xs-12">
-
           <p class="black"><b>Day Off</b></p>
         </div>
       </div>
@@ -178,7 +176,7 @@
       } %>
       <%= render partial: 'home/activity_deats', :locals => {
           time: '11am - 1pm',
-          title1: 'General Open Discussion, Introduction to Festival, Etc.'
+          title1: 'General Open Discussion'
       } %>
       <%= render partial: 'home/activity_deats', :locals => {
           time: '1pm - 230pm',
@@ -227,3 +225,4 @@
     </div>
   </div>
 </section>
+git
