update final concert thing

--- a/app/views/home/schedule.html.erb
+++ b/app/views/home/schedule.html.erb
@@ -1,4 +1,4 @@
-<section >
+<section>
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -217,11 +217,13 @@
           title1: 'Open Discussion/Prep for Concert'
       } %>
       <%= render partial: 'home/activity_deats', :locals => {
-          time: '6pm -9pm',
-          title1: 'Finale Concert/Event/Continuation of Ongoing Performances',
+          time: '7pm -830pm',
+          title1: 'Finale: Co-Incidence Festival 2020',
           is_concert: true,
-          concert_link: "https://www.facebook.com/events/410142249710176"
+          concert_link: "https://www.facebook.com/events/410142249710176",
+          description: "We are very pleased to be presenting a concert-talk by John Holloway on the relation between experimental music, our time together during the Festival, and revolutionary thought (and John's burgeoning new career as an experimental musician). John's talk will be accompanied, sonically, by the group of artists."
       } %>
+
     </div>
   </div>
 </section>
