--- a/app/views/home/_activity_deats.html.erb
+++ b/app/views/home/_activity_deats.html.erb
@@ -21,6 +21,11 @@
             </p>
           <% end %>
         </a>
+        <% if local_assigns[:description] %>
+          <p class="indent">
+            <%= local_assigns[:description] %>
+          </p>
+        <% end %>
       </i>
     <% else %>
       <p>
