--- a/app/views/home/sections/_logos.html.erb
+++ b/app/views/home/sections/_logos.html.erb
@@ -64,7 +64,8 @@
     </h3>
     <br/>
     <h5>
-      This program is supported in part by a grant from the Mayor’s Office of Arts and Culture and the City of Boston.
+      This program is supported in part by a grant from the Mayor’s Office of Arts and Culture, the Somerville Arts
+      Council, and the City of Boston.
     </h5>
   </div>
   <div class="row text-center">
@@ -82,9 +83,9 @@
     <!--         <div class="business-logo">
             <%#= image_tag asset_url("business-logos/austrian-logo.png") %>
         </div> -->
-    <!--         <div class="business-logo">
-          <%#= image_tag asset_url("business-logos/SAC_black300dpi.jpg") %>
-        </div> -->
+    <div class="business-logo">
+      <%= image_tag asset_url("business-logos/SAC_black300dpi.jpg") %>
+    </div>
     <div class="business-logo">
       <%= image_tag asset_url("MCC_Logo.png") %>
     </div>
