adds calartsx logo

--- a/app/views/home/sections/_logos.html.erb
+++ b/app/views/home/sections/_logos.html.erb
@@ -98,5 +98,8 @@
     <div class="business-logo">
       <%= image_tag asset_url("business-logos/PH_logo_byline_EN_black.jpg") %>
     </div>
+    <div class="business-logo bg-dark btn">
+      <%= image_tag asset_url("business-logos/CALARTSX_SPONSORED.png") %>
+    </div>
   </div>
 </section>
