moves 2020 artists and adds nina to the home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
 
 <%#= render 'home/sections/guest_artists_2018' %>
 <%#= render 'home/sections/guest_artists_2019' %>
-<%= render 'home/sections/guest_artists_2020' %>
+<%#= render 'home/sections/guest_artists_2020' %>
 
 <%= render 'home/sections/about' %>
 <%= render 'home/sections/logos' %>
