--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -80,21 +80,15 @@
             Resident Artist
           </h4>
           <div class="details-pic">
-            <%= image_tag asset_url("2020/holloway.jpg") %>
+            <%= image_tag asset_url("2021/nina_from_facebook.jpg") %>
           </div>
           <p class="text-muted partner-link">
-            <a href="http://www.johnholloway.com.mx/?utm_source=coincidence+festival&utm_campaign=9af6ef3c9e-EMAIL_CAMPAIGN_2019_04_17_05_49&utm_medium=email&utm_term=0_7ca53a9df4-9af6ef3c9e-33974085" target="_blank">
-              John Holloway
+            <a href="http://www.ninapower.net/" target="_blank">
+              Nina Power
             </a>
           </p>
           <p>
-            John Holloway is a Professor of Sociology at the Instituto de Ciencias Sociales y Humanidades in the
-            Benemérita Universidad Autónoma de Puebla, Mexico. He has published widely on Marxist theory, on the
-            Zapatista movement, and on the new forms of anti-capitalist struggle. His book Change the World Without
-            taking Power (Pluto, London, 2002, new edition 2010) has been translated into eleven languages and has
-            stirred an international debate. His recent book, Crack Capitalism (Pluto, 2010), takes the argument further
-            by suggesting that the only way in which we can think of revolution today is as the creation, expansion,
-            multiplication and confluence of cracks in capitalist domination.
+            Nina Power is a Senior Lecturer in Philosophy at Roehampton University and Tutor in Critical Writing in Art & Design at the Royal College of Art. She has written widely on politics, philosophy, feminism and culture.
           </p>
         </div>
       </div>
