--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,34 +13,37 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-<!--         <li>
-          <a class="page-scroll" href="#about">About</a>
-        </li> -->
+        <!--         <li>
+                  <a class="page-scroll" href="#about">About</a>
+                </li> -->
+<!--        <li>-->
+<!--          <a class="" href="/schedule">Schedule</a>-->
+<!--        </li>-->
         <li>
-          <a class="" href="/schedule">Schedule</a>
-        </li>
-        <li>
-            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Past Seasons
-            </a>
+          <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Past Seasons
+          </a>
 
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <li>
-                    <a class="" href="2019-season">2019 SEASON</a>
-                  </li>
-                  <li>
-                    <a class="" href="2018-season">2018 SEASON</a>
-                  </li>
-                  <li>
-                    <a class="" href="2017-season">2017 SEASON</a>
-                  </li>
-            </ul>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <li>
+              <a class="" href="2020-season">2020 SEASON</a>
+            </li>
+            <li>
+              <a class="" href="2019-season">2019 SEASON</a>
+            </li>
+            <li>
+              <a class="" href="2018-season">2018 SEASON</a>
+            </li>
+            <li>
+              <a class="" href="2017-season">2017 SEASON</a>
+            </li>
+          </ul>
         </li>
 
-        <li>
-          <a class="page-scroll" href="/home/#intro2020">2020 SEASON</a>
-        </li>
-        
+<!--        <li>-->
+<!--          <a class="page-scroll" href="/home/#intro2020">2020 SEASON</a>-->
+<!--        </li>-->
+
         <!-- <li>
           <a class="page-scroll" href="/home/#describe">Details</a>
         </li> -->
