updates nina's bio

--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -88,7 +88,7 @@
             </a>
           </p>
           <p>
-            Nina Power is a Senior Lecturer in Philosophy at Roehampton University and Tutor in Critical Writing in Art & Design at the Royal College of Art. She has written widely on politics, philosophy, feminism and culture.
+            Nina Power is a writer and philosopher. She is the author of One-Dimensional Woman and of many articles. Her forthcoming book What Do Men Want? will be out with Penguin soon. Beyond writing and philosophy, Nina's interests include contemporary experimental music, psychoanalysis, paganism, honesty and groups.
           </p>
         </div>
       </div>
