2021 is a go fam

--- a/app/views/home/sections/_intro2020.html.erb
+++ b/app/views/home/sections/_intro2020.html.erb
@@ -57,9 +57,9 @@
 <!--        <br>-->
 <!--        <h4><a class="" href="/application">Please apply here</a></h4>-->
 <!--        <br>-->
-        <p>
-          applications due october 1st || results sent by october 9th
-        </p>
+<!--        <p>-->
+<!--          applications due october 1st || results sent by october 9th-->
+<!--        </p>-->
         <br>
         <hr class="tertiary">
 
