builds out penta years

--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -73,6 +73,10 @@ h5 {
   color: white;
 }
 
+.btn-2021-fugu {
+  margin-top: 40px;
+}
+
 .btn-2020-fugu {
   margin-top: 30px;
 }
@@ -367,4 +371,8 @@ textarea.form-control {
 .indent {
   margin: 0 45px 0 15px;
   font-size: 14px;
+}
+
+.m-15-top {
+  margin-top: 15px;
 }
