--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,12 +13,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <!--         <li>
-                  <a class="page-scroll" href="#about">About</a>
-                </li> -->
-<!--        <li>-->
-<!--          <a class="" href="/schedule">Schedule</a>-->
-<!--        </li>-->
+        <li>
+          <a class="page-scroll" href="/application">Apply for the 2021 Season</a>
+        </li>
         <li>
           <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Past Seasons
@@ -40,9 +37,9 @@
           </ul>
         </li>
 
-<!--        <li>-->
-<!--          <a class="page-scroll" href="/home/#intro2020">2020 SEASON</a>-->
-<!--        </li>-->
+        <!--        <li>-->
+        <!--          <a class="page-scroll" href="/home/#intro2020">2020 SEASON</a>-->
+        <!--        </li>-->
 
         <!-- <li>
           <a class="page-scroll" href="/home/#describe">Details</a>
