--- a/app/views/home/application2019.html.erb
+++ b/app/views/home/application2019.html.erb
@@ -13,7 +13,9 @@
     <div class="row">
       <div class="col-md-12 text-center">
         <p class="text-faded">
-          Fill out your application here. We are most interested in your project proposal for the festival. Our main advice is: think big, think radical, and be idealistic. Your portfolio functions as supplementary material that will give us a better chance to get to know you as an artist.
+          Fill out your application here. We are most interested in your project proposal for the festival. Our main
+          advice is: think big, think radical, and be idealistic. Your portfolio functions as supplementary material
+          that will give us a better chance to get to know you as an artist.
         </p>
       </div>
       <!-- <div class="col-md-6 text-center">
@@ -29,7 +31,7 @@
         </p>
       </div> -->
     </div>
-    <br />
+    <br/>
     <div class="row">
       <div class="col-md-6">
         <ul>
@@ -62,7 +64,7 @@
               Depart anytime on January 30th, 2017
             </p>
           </li>
-        <ul>
+        </ul>
       </div>
     </div>
   </div>
@@ -77,20 +79,21 @@
 
 
   <div class="container collapse hide" id="collapseExample">
-    <br />
-    <hr />
-    <%= form_for(@coincident, remote: true, :html => {:class => "form-inline"} ) do |f| %>
+    <br/>
+    <hr/>
+    <%= form_for(@coincident, remote: true, :html => {:class => "form-inline"}) do |f| %>
       <div class="row">
         <div class="col-md-6">
           <h3>
             Personal Info (Required)
           </h3>
           <p class="text-faded small-text">
-            Please let us know who you are! Our main means of contact will be e-mail, so please check it (and your spam folder) regularly.
+            Please let us know who you are! Our main means of contact will be e-mail, so please check it (and your spam
+            folder) regularly.
           </p>
           <%= f.label :name, class: 'fugu-width' %>
           <%= f.text_field :name, class: 'form-control', :required => true %>
-          <br />
+          <br/>
 
           <%= f.label :email, class: 'fugu-width m-5-top' %>
           <%= f.text_field :email, class: 'form-control m-5-top', :required => true %>
@@ -100,29 +103,32 @@
             &nbsp;
           </h3>
 
-          <br />
+          <br/>
           <%= f.label :birthday, :required => true, class: 'fugu-width m-5-top' %>
           <%= f.date_field :birthday, class: 'form-control m-5-top', :required => true %>
-          <br />
+          <br/>
           <%= f.label :address, :required => true, class: 'fugu-width m-5-top' %>
           <%= f.text_area :address, class: 'form-control m-5-top', :required => true %>
         </div>
       </div>
-      <br />
-      <hr />
+      <br/>
+      <hr/>
       <div class="row">
         <div class="col-md-6">
           <h3>
             Portfolio
           </h3>
           <p class="text-faded small-text">
-            We'd like to get a sense of what you do and what you are interested in. While we are most interested in your Work Samples, a Website and CV/Resume will help us get a clearer picture of what you do.
+            We'd like to get a sense of what you do and what you are interested in. While we are most interested in your
+            Work Samples, a Website and CV/Resume will help us get a clearer picture of what you do.
           </p>
           <p class="text-faded small-text">
-            *All documents should be linked to via resources like Dropbox and Google Drive. Make sure the documents are accessible to us to view.*
+            *All documents should be linked to via resources like Dropbox and Google Drive. Make sure the documents are
+            accessible to us to view.*
           </p>
           <p class="text-faded small-text">
-            Please provide your website if you have it. If you do not, that is okay, it will not negatively affect your application.
+            Please provide your website if you have it. If you do not, that is okay, it will not negatively affect your
+            application.
           </p>
           <%= f.label 'Website (Optional)' %>
           <%= f.text_field :website, class: 'form-control' %>
@@ -134,44 +140,55 @@
             </h3>
           </div>
           <p class="text-faded small-text">
-            You may provide 1 - 3 Work Samples, in whatever form/format you feel best represents you. To note: we only require 1 Work Sample, and the number of Work Samples you submit will not negatively affect application.
+            You may provide 1 - 3 Work Samples, in whatever form/format you feel best represents you. To note: we only
+            require 1 Work Sample, and the number of Work Samples you submit will not negatively affect application.
           </p>
           <%= f.label :link1, 'Work Sample 1, Link (Required)', class: ' m-5-top', :required => true %>
           <%= f.text_field :link1, class: 'form-control', :required => true %>
-          <br />
-          <%= f.label :link2, 'Work Sample 2, Link (Optional)', class: ' m-5-top'  %>
+          <br/>
+          <%= f.label :link2, 'Work Sample 2, Link (Optional)', class: ' m-5-top' %>
           <%= f.text_field :link2, class: 'form-control m-5-top' %>
-          <br />
-          <%= f.label :link3, 'Work Sample 3, Link (Optional)', class: ' m-5-top'  %>
+          <br/>
+          <%= f.label :link3, 'Work Sample 3, Link (Optional)', class: ' m-5-top' %>
           <%= f.text_field :link3, class: 'form-control m-5-top' %>
-          <br />
+          <br/>
 
-          <br />
+          <br/>
           <p class="text-faded small-text">
-            Finally, we'd like to see a CV or Resume (or, if you feel better represented by an alternate document that can take the place of a CV or Resume, we welcome that). Any length is fine.
+            Finally, we'd like to see a CV or Resume (or, if you feel better represented by an alternate document that
+            can take the place of a CV or Resume, we welcome that). Any length is fine.
           </p>
           <%= f.label :cv_resume_link, "CV, Resume, or Other (Required)" %>
           <%= f.text_field :cv_resume_link, class: 'form-control' %>
         </div>
       </div>
-      <br />
-      <hr />
+      <br/>
+      <hr/>
       <div class="row">
         <div class="col-md-6">
           <h3>
             Proposal
           </h3>
           <p class="text-faded small-text">
-            Give us an idea of the work that you propose to compose for the festival. Anything from a text description to a draft of a score will do just fine. This will be the work that you will bring - completed - to the festival to workshop and perform, and also as a means for starting discussion among the group.
+            Give us an idea of the work that you propose to compose for the festival. Anything from a text description
+            to a draft of a score will do just fine. This will be the work that you will bring - completed - to the
+            festival to workshop and perform, and also as a means for starting discussion among the group.
           </p>
           <p class="text-faded small-text">
-            Please bear in mind that the work you will be proposing will be workshopped and performed by the co-incidence ensemble, i.e., the other guest artists, resident artist, directors, and potentially members of the local community (at least 9 people: 6 guest artists, 1 resident artist, 2 directors). Moreover, you will have the opportunity to have your work performed on Sunday for an extended duration as the final performance is for an undetermined length of time. We imagine works lasting anywhere from, though not limited to, an hour, 2 hours, 3 hours, 4 hours, etc.
+            Please bear in mind that the work you will be proposing will be workshopped and performed by the
+            co-incidence ensemble, i.e., the other guest artists, resident artist, directors, and potentially members of
+            the local community (at least 9 people: 6 guest artists, 1 resident artist, 2 directors). Moreover, you will
+            have the opportunity to have your work performed on Sunday for an extended duration as the final performance
+            is for an undetermined length of time. We imagine works lasting anywhere from, though not limited to, an
+            hour, 2 hours, 3 hours, 4 hours, etc.
           </p>
           <p class="text-faded small-text">
-            Due to these factors, we encourage works of open (and malleable) instrumentation and of open duration. This is by no means a requirement.
+            Due to these factors, we encourage works of open (and malleable) instrumentation and of open duration. This
+            is by no means a requirement.
           </p>
           <p class="text-faded small-text">
-            Also, though the performances will take place at Washington Street Gallery, you are not confined to that space (though, it will be cold and snowy in Boston, so please be aware of this!).
+            Also, though the performances will take place at Washington Street Gallery, you are not confined to that
+            space (though, it will be cold and snowy in Boston, so please be aware of this!).
           </p>
           <p class="text-faded small-text">
             To note: there will be no piano available in the space.
@@ -183,17 +200,17 @@
           </h3>
           <%= f.label 'Instrument(s) that you are willing to play as part of the co-incidence ensemble', :required => true %>
           <%= f.text_field :instruments, class: 'form-control', :required => true %>
-          <br />
-          <br />
-          <%= f.label 'Why are you interested in applying? (concise response, please)', :required => true,class: ' m-5-top' %>
+          <br/>
+          <br/>
+          <%= f.label 'Why are you interested in applying? (concise response, please)', :required => true, class: ' m-5-top' %>
           <%= f.text_area :why_apply, class: 'form-control my-text-box', :required => true %>
-          <br />
-          <br />
+          <br/>
+          <br/>
           <%= f.label 'Link to your Project Description', :required => true, class: ' m-5-top' %>
           <%= f.text_field :project_description, class: 'form-control m-5-top', :required => true %>
 
-          <br />
-          <br />
+          <br/>
+          <br/>
           <%= f.submit 'SUBMIT APPLICATION', class: 'btn btn-secondary btn-fugu' %>
         </div>
       </div>
