--- a/app/views/home/sections/_notification.html.erb
+++ b/app/views/home/sections/_notification.html.erb
@@ -1,20 +1,21 @@
-<% if @fourthYear %>
-<div class="notification">
-  <br />
-  <br />
-  <br />
-  <br />
+<% if @penta_year %>
+  <div class="notification">
+    <br/>
+    <br/>
+    <br/>
+    <br/>
 
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-lg-12">
-        <p class="text-faded"
-          style="padding-bottom: 15px;"
-        >
-          Application for <span class="reddish"><%= @fourthYear.name %></span> has been successfully submitted. Thanks!
-        </p>
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-lg-12">
+          <p class="text-faded"
+             style="padding-bottom: 15px;"
+          >
+            Application for <span class="reddish"><%= @penta_year.name %></span> has been successfully submitted.
+            Thanks!
+          </p>
+        </div>
       </div>
-    </div>
+    </div>h
   </div>
-</div>
 <% end %>
