add application text & admin part

--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -11,43 +11,36 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-lg-4 col-md-4 col-sm-12 text-center">
-        <div class="service-box">
-          <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-          <h4>
-            Hosted by
-          </h4>
-          <div class="details-pic washingtub-pic">
-            <%= image_tag asset_url("washingtub.jpg") %>
-          </div>
-          <p class="text-muted partner-link">
-            <a href="http://washingtonst.org/">
-              Washington Street Gallery
-            </a>
-          </p>
-          <p>
-            Washington St. is home to 20 artists who work in a broad range of media. from sculpture to paper cutting,
-            painting to book binding and everything in between - the collaborative houses a cornucopia of creatives from
-            many different backgrounds. with its own photo lab, Washington St. also hosts photography members who share
-            the darkroom and photo studio.​ additionally, Washington St. has served for many years as an experimental
-            music venue, directed by composer/performers Michael Rosenstein, Jesse Collins, and Morgan Evans-Weiler.​
-          </p>
-          --
-          <p>
-            <a href="https://drive.google.com/drive/folders/0B_0ZEgSpOR3uaE9GWFpSU0wzNmM?usp=sharing">
-              pictures of the space.
-            </a>
-          </p>
-          <!-- --
-          <p>
-            From
-            <a href="http://www.wandelweiser.de/_michael-pisaro/texts.html#HIT_OR_MISS"> 
-              Hit Or Miss
-            </a> -->
-          </p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-12 text-center">
+<!--      <div class="col-lg-4 col-md-4 col-sm-12 text-center">-->
+<!--        <div class="service-box">-->
+<!--          <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>-->
+<!--          <h4>-->
+<!--            Hosted by-->
+<!--          </h4>-->
+<!--          <div class="details-pic washingtub-pic">-->
+            <%#= image_tag asset_url("washingtub.jpg") %>
+<!--          </div>-->
+<!--          <p class="text-muted partner-link">-->
+<!--            <a href="http://washingtonst.org/">-->
+<!--              Washington Street Gallery-->
+<!--            </a>-->
+<!--          </p>-->
+<!--          <p>-->
+<!--            Washington St. is home to 20 artists who work in a broad range of media. from sculpture to paper cutting,-->
+<!--            painting to book binding and everything in between - the collaborative houses a cornucopia of creatives from-->
+<!--            many different backgrounds. with its own photo lab, Washington St. also hosts photography members who share-->
+<!--            the darkroom and photo studio.​ additionally, Washington St. has served for many years as an experimental-->
+<!--            music venue, directed by composer/performers Michael Rosenstein, Jesse Collins, and Morgan Evans-Weiler.​-->
+<!--          </p>-->
+<!--          ---->
+<!--          <p>-->
+<!--            <a href="https://drive.google.com/drive/folders/0B_0ZEgSpOR3uaE9GWFpSU0wzNmM?usp=sharing">-->
+<!--              pictures of the space.-->
+<!--            </a>-->
+<!--          </p>-->
+<!--        </div>-->
+<!--      </div>-->
+      <div class="col-md-5 col-md-offset-1 col-sm-12 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
           <h4>
@@ -73,7 +66,7 @@
           </p>
         </div>
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-12 text-center">
+      <div class="col-md-5 col-sm-12 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
           <h4>
@@ -88,7 +81,9 @@
             </a>
           </p>
           <p>
-            Nina Power is a writer and philosopher. She is the author of One-Dimensional Woman and of many articles. Her forthcoming book What Do Men Want? will be out with Penguin soon. Beyond writing and philosophy, Nina's interests include contemporary experimental music, psychoanalysis, paganism, honesty and groups.
+            Nina Power is a writer and philosopher. She is the author of One-Dimensional Woman and of many articles. Her
+            forthcoming book What Do Men Want? will be out with Penguin soon. Beyond writing and philosophy, Nina's
+            interests include contemporary experimental music, psychoanalysis, paganism, honesty and groups.
           </p>
         </div>
       </div>
