--- a/app/views/penta_years/new.html.erb
+++ b/app/views/penta_years/new.html.erb
@@ -10,11 +10,7 @@
     </div>
   </div>
   <div class="container">
-    <div class="row">
-      <div class="col-md-10 col-md-offset-1 text-center">
-        description and whatnot goes here
-      </div>
-    </div>
+    <%= render 'penta_years/description' %>
   </div>
 </section>
 <section id="application">
