--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -376,3 +376,12 @@ textarea.form-control {
 .m-15-top {
   margin-top: 15px;
 }
+
+.mustachio {
+  font-size: 16px;
+  text-decoration: underline;
+}
+
+label {
+  letter-spacing: .25px;
+}
