--- a/app/views/penta_years/new.html.erb
+++ b/app/views/penta_years/new.html.erb
@@ -21,26 +21,15 @@
           <%= f.label :name, 'Name *', class: 'fugu-width' %>
           <%= f.text_field :name, class: 'form-control m-5-top', :required => true %>
 
-          <%= f.label :email, 'Email *', class: 'fugu-width m-15-top' %>
-          <%= f.text_field :email, class: 'form-control m-5-top', :required => true %>
-
-        </div>
-        <div class="col-md-6">
           <%= f.label :proposal_link, 'Proposal link *', class: 'm-15-top' %>
           <p class="small-text">(Please please make sure this is unlocked so we can review it without emailing you for
             permission!)</p>
           <%= f.text_field :proposal_link, class: 'form-control m-5-top', :required => true %>
         </div>
-      </div>
-      <hr class="secondary">
-      <div class="row">
         <div class="col-md-6">
-          <%= f.label :about_me,
-                      "Issues of race and gender under-representation, among myriad other issues, plague festivals and events like ours. We cannot fix broken system (yet), but we surely cannot ignore these inequalities. So, please let us know something about yourself.",
-                      :required => false,
-                      class: 'm-15-top'
-          %>
-          <%= f.text_area :about_me, :required => false, class: 'm-5-top form-control my-text-box' %>
+          <%= f.label :email, 'Email *', class: 'fugu-width' %>
+          <%= f.text_field :email, class: 'form-control m-5-top', :required => true %>
+
 
           <%= f.label :attendance_capacity, 'Attendance Capacity *', class: 'm-15-top' %>
           <%= f.select :attendance_capacity,
@@ -55,12 +44,24 @@
                        }
           %>
         </div>
+      </div>
+      <hr class="secondary">
+      <div class="row">
         <div class="col-md-6">
-          <%= f.label :website, class: 'fugu-width m-15-top' %>
-          <%= f.text_field :website, class: 'form-control m-5-top', :required => false %>
+          <%= f.label :about_me,
+                      "Issues of race and gender under-representation, among myriad other issues, plague festivals and events like ours. We cannot fix broken system (yet), but we surely cannot ignore these inequalities. So, please let us know something about yourself.",
+                      :required => false,
+                      class: 'm-15-top'
+          %>
+          <%= f.text_area :about_me, :required => false, class: 'm-5-top form-control my-text-box' %>
+
 
           <%= f.label :location, class: 'fugu-width m-15-top' %>
           <%= f.text_field :location, class: 'form-control m-5-top', :required => false %>
+        </div>
+        <div class="col-md-6">
+          <%= f.label :website, class: 'fugu-width m-15-top' %>
+          <%= f.text_field :website, class: 'form-control m-5-top', :required => false %>
 
           <%= f.label :why, "Tell us a bit more about why you're interesting in applying", :required => false, class: 'm-15-top' %>
           <%= f.text_area :why, :required => false, class: 'm-5-top form-control my-text-box' %>
