--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -379,7 +379,12 @@ textarea.form-control {
 
 .mustachio {
   font-size: 16px;
-  text-decoration: underline;
+  border-bottom: 1px solid black;
+  margin-top: 32px;
+}
+
+.mustachio:first-of-type {
+  margin-top: 0;
 }
 
 label {
