--- a/app/views/home/sections/_description.html.erb
+++ b/app/views/home/sections/_description.html.erb
@@ -6,9 +6,12 @@
           ABOUT
         </h2> -->
         <p class="text-faded">
-          <i>the co-incidence festival </i>is a gathering of experimental composer-performers at Washington Street
-          Gallery in Somerville, MA.
+          <i>the co-incidence festival </i>is a gathering of experimental composer-performers
         </p>
+<!--        <p class="text-faded">-->
+<!--          <i>the co-incidence festival </i>is a gathering of experimental composer-performers at Washington Street-->
+<!--          Gallery in Somerville, MA.-->
+<!--        </p>-->
         <hr class="light">
         <p class="text-faded">
           this project is based on an expanded view of what constitutes art, music, and the traditional concert.
@@ -38,11 +41,10 @@
         <br/>
         <p class="text-faded">
           check out some media from our <a href="/2017-season">2017</a>,
-          <a href="/2018-season">2018</a>
-          or
-          <a href="/2019-season">2019</a> season.
+          <a href="/2018-season">2018</a>,
+          <a href="/2019-season">2019</a>, or
+          <a href="/2020-season">2020</a> season.
         </p>
-
       </div>
     </div>
   </div>
