--- a/app/views/penta_years/_description.html.erb
+++ b/app/views/penta_years/_description.html.erb
@@ -30,7 +30,7 @@
       earlier, mainly due to space limitations on the in-person part, but we'll go with the flow, and it'll be just
       fine!
     </p>
-    <hr class="secondary">
+<!--    <hr class="secondary">-->
     <p class="mustachio">
       WHAT DO YOU MEAN BY 'PROJECT'?
     </p>
@@ -55,7 +55,7 @@
       what that looks like. Please <i>don't</i> twist your conceptual orientation to make it awkwardly fit a 'hybrid'
       model. We are more interested in a great idea even if it is partially or entirely exclusionary.
     </p>
-    <hr class="secondary">
+<!--    <hr class="secondary">-->
     <p class="mustachio">
       PROMPT(-ISH)
     </p>
@@ -86,7 +86,7 @@
       question of how a heterogeneous group of multiplicities can organize as a collective subject. And, in a broad
       sense, it is a question of how to participate in change that would echo from the core of our very being.
     </p>
-    <hr class="secondary">
+<!--    <hr class="secondary">-->
     <p class="mustachio">
       NOTE ABOUT MONEY
     </p>
@@ -96,7 +96,7 @@
       want to be involved. We will be aiming to provide (small) funds for: travel, payment for a project, and other
       things as needed.
     </p>
-    <hr class="secondary" id="end">
+<!--    <hr class="secondary" id="end">-->
     <p class="mustachio" >
       NOTE ABOUT VIRTUAL/IN-PERSON
     </p>
@@ -120,5 +120,10 @@
       <br>
       Same as (2), but you’ll be in-person.
     </p>
+<!--    <hr class="secondary">-->
+    <p class="mustachio">TIMELINE</p>
+    <p><b>Open:</b> 8/10/2020</p>
+    <p><b>Close:</b> 10/4/2020 11:59PM EST</p>
+    <p><b>Notifications:</b> 10/11/2020</p>
   </div>
 </div>
