--- a/app/views/home/sections/_intro2021.html.erb
+++ b/app/views/home/sections/_intro2021.html.erb
@@ -6,7 +6,7 @@
           OUR 2021 SEASON
         </h2>
         <h5>
-          january 2—10, 2021, at Washington Street Art Center in Somerville, MA
+          january 2—10, 2021
         </h5>
         <hr class="primary">
       </div>
@@ -20,23 +20,38 @@
           What does it mean to be a we?
         </p>
         <p>
-          In our current capitalist system, the cracks of which are showing more and more, the pressure is to be an I. I have a job. I make art. I think. I vote. But there are others who think that the way forward involves not the singular, but the collective, or collections of people.
+          In our current capitalist system, the cracks of which are showing more and more, the pressure is to be an I. I
+          have a job. I make art. I think. I vote. But there are others who think that the way forward involves not the
+          singular, but the collective, or collections of people.
         </p>
         <p>
-          But how do a collection of I’s become a we? Surely not through unification (sameness). We are all different. While we might have similarities or be in agreement, there is no one unifying idea that can stand up against the strength of the cultural pressure to be I. And, once there is a we, how does it maintain it’s we-ness without compromising all its members?
+          But how do a collection of I’s become a we? Surely not through unification (sameness). We are all different.
+          While we might have similarities or be in agreement, there is no one unifying idea that can stand up against
+          the strength of the cultural pressure to be I. And, once there is a we, how does it maintain it’s we-ness
+          without compromising all its members?
         </p>
         <p>
-          How can we coalesce without unifying? Without rounding out the corners, without leaving behind certain essential parts of our beings? How can we come together as a group of flawed humans who each would like very much to ignore or leave behind said flaws? More formally, it is a question of how a heterogeneous group of multiplicities can organize as a collective subject. And, in a broad sense, it is a question of how to participate in change that would echo from the core of our very being. To identify this point of change is to locate and incorporate that which appears undecidable and indiscernible into our world. To realize the collective subject is to suggest an impossible hypothesis as true, to wager, and in wagering to radically hope, on a future and world beyond this one.
+          How can we coalesce without unifying? Without rounding out the corners, without leaving behind certain
+          essential parts of our beings? How can we come together as a group of flawed humans who each would like very
+          much to ignore or leave behind said flaws? More formally, it is a question of how a heterogeneous group of
+          multiplicities can organize as a collective subject. And, in a broad sense, it is a question of how to
+          participate in change that would echo from the core of our very being. To identify this point of change is to
+          locate and incorporate that which appears undecidable and indiscernible into our world. To realize the
+          collective subject is to suggest an impossible hypothesis as true, to wager, and in wagering to radically
+          hope, on a future and world beyond this one.
         </p>
         <p>
-          This year at co-incidence, joined by resident artist Nina Power, we will interrogate this idea of groups, of we’s. During our time together at the festival, what mirrors can we hold to ourselves that don’t just show us? What might this world beyond look like and how can we experiment toward it; how can we begin to listen to that which is radically unhearable?
+          This year at co-incidence, joined by resident artist Nina Power, we will interrogate this idea of groups, of
+          we’s. During our time together at the festival, what mirrors can we hold to ourselves that don’t just show us?
+          What might this world beyond look like and how can we experiment toward it; how can we begin to listen to that
+          which is radically unhearable?
         </p>
         <!--        <p><a class="" href="/faq-2020">more info can be found here</a></p>-->
         <!--        <br/>-->
         <!--        <br/>-->
-        <!--        <hr class="tertiary">-->
-        <!--        <br>-->
-        <!--        <h4><a class="" href="/application">Please apply here</a></h4>-->
+<!--                <hr class="tertiary">-->
+                <br>
+                <h4><a class="" href="/application">Please apply here</a></h4>
         <!--        <br>-->
         <!--        <p>-->
         <!--          applications due october 1st || results sent by october 9th-->
