--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,14 +13,13 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-<!--        <li>-->
-<!--          <a class="page-scroll" href="/application">Apply for the 2021 Season</a>-->
-<!--        </li>-->
+        <li>
+          <a class="page-scroll" href="/application">Apply for the 2021 Season</a>
+        </li>
         <li>
           <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Past Seasons
           </a>
-
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             <li>
               <a class="" href="2020-season">2020 SEASON</a>
