penta_years: fixed typo

--- a/app/views/penta_years/new.html.erb
+++ b/app/views/penta_years/new.html.erb
@@ -66,7 +66,7 @@
               <%= f.label :website, class: 'fugu-width m-15-top' %>
               <%= f.text_field :website, class: 'form-control m-5-top', :required => false %>
 
-              <%= f.label :why, "Tell us a bit more about why you're interesting in applying", :required => false, class: 'm-15-top' %>
+              <%= f.label :why, "Tell us a bit more about why you're interested in applying", :required => false, class: 'm-15-top' %>
               <%= f.text_area :why, :required => false, class: 'm-5-top form-control my-text-box' %>
             </div>
             <div class="col-md-12">
