Add dem dates & fix a link

--- a/app/views/penta_years/_description.html.erb
+++ b/app/views/penta_years/_description.html.erb
@@ -90,14 +90,14 @@
     <p class="mustachio">
       NOTE ABOUT MONEY
     </p>
-    <p>
+    <p id="end">
       We’re doing our best to locate some funds to help people out. Due to the (extra) insanity of the world, we do not
       have a finalized budget, and thus any financial decisions will be a bit last minute and will depend on how many
       want to be involved. We will be aiming to provide (small) funds for: travel, payment for a project, and other
       things as needed.
     </p>
-<!--    <hr class="secondary" id="end">-->
-    <p class="mustachio" >
+<!--    <hr class="secondary">-->
+    <p class="mustachio">
       NOTE ABOUT VIRTUAL/IN-PERSON
     </p>
     <p>
