--- a/app/views/penta_years/new.html.erb
+++ b/app/views/penta_years/new.html.erb
@@ -5,6 +5,7 @@
         <h2 class="section-heading fugu-h3">
           2021 APPLICATION
         </h2>
+        <h3 class="text-center">January 2-10, 2021</h3>
         <hr class="primary">
       </div>
     </div>
