--- a/app/views/home/sections/_intro2021.html.erb
+++ b/app/views/home/sections/_intro2021.html.erb
@@ -51,7 +51,7 @@
         <!--        <br/>-->
 <!--                <hr class="tertiary">-->
                 <br>
-                <h4><a class="" href="/application">Please apply here</a></h4>
+<!--                <h4><a class="" href="/application">Please apply here</a></h4>-->
         <!--        <br>-->
         <!--        <p>-->
         <!--          applications due october 1st || results sent by october 9th-->
