--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%#= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-
+  <%= javascript_include_tag "application", "data-turbolinks-track" => "reload" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -20,4 +20,5 @@
   <%= yield %>
 
 </body>
+
 </html>
