updates for jan

--- a/app/views/home/sections/_intro2021.html.erb
+++ b/app/views/home/sections/_intro2021.html.erb
@@ -6,7 +6,7 @@
           OUR 2021 SEASON
         </h2>
         <h5>
-          january 2—10, 2021
+          january 14-17, 2021 && summer
         </h5>
         <hr class="primary">
       </div>
@@ -15,6 +15,17 @@
 
   <div class="container">
     <div class="row text-center">
+      <div class="col-md-8 col-md-offset-2">
+        <h4>UPDATE</h4>
+        <p>
+          as the festival grows closer it has become apparent that an in-person option is not going to be viable. however, the communal gathering is an important part of the festival, and we feel there should still be that option (in some form).
+        </p>
+        <p>
+          so, we will have a shorter all-online event in january, and postpone the longer in-person/virtual combo event until the summer. more details to come.
+        </p>
+        <hr class="tertiary" />
+      </div>
+
       <div class="col-md-8 col-md-offset-2">
         <p>
           What does it mean to be a we?
