--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -322,7 +322,7 @@ textarea.form-control {
   background: #e7e7e7;
 }
 
-#intro2020 {
+#intro2020, #intro2021 {
   padding-bottom: 0;
   margin-bottom: -15px;
 }
