--- a/app/views/home/sections/_intro2021.html.erb
+++ b/app/views/home/sections/_intro2021.html.erb
@@ -1,4 +1,4 @@
-<section id="intro2020">
+<section id="intro2021">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -6,7 +6,10 @@
           OUR 2021 SEASON
         </h2>
         <h5>
-          january 14-17, 2021 && summer
+          part 1: january 14-17, 2021 (all virtual)
+        </h5>
+        <h5>
+          part 2: summer, 2021 (in-person & virtual)
         </h5>
         <hr class="primary">
       </div>
@@ -18,58 +21,44 @@
       <div class="col-md-8 col-md-offset-2">
         <h4>UPDATE</h4>
         <p>
-          as the festival grows closer it has become apparent that an in-person option is not going to be viable. however, the communal gathering is an important part of the festival, and we feel there should still be that option (in some form).
+          we will have a condensed and introductory event in january 2021, which will last four days and be entirely
+          virtual. this will be followed by the full festival, in-person, for ten days in the summer (details to come in
+          the spring). people are invited to attend any and all events in both january and the summer!
         </p>
-        <p>
-          so, we will have a shorter all-online event in january, and postpone the longer in-person/virtual combo event until the summer. more details to come.
-        </p>
-        <hr class="tertiary" />
+        <br>
+        <hr class="tertiary"/>
+        <br>
+        <br>
       </div>
-
+      <br>
       <div class="col-md-8 col-md-offset-2">
+        <h5>
+          PART ONE: JANUARY
+        </h5>
         <p>
-          What does it mean to be a we?
+          the january events are hosted on the <a href="https://discord.com/">Discord</a> platform. it can be accessed
+          on your browser or (better) downloaded to your computer or phone. an invite-link is required to enter the
+          Co-Incidence server: if you would like to attend any events, please
+          <a href="mailto:coincidence.festival@gmail.com?subject=Access to Discord Server">email us</a>.
         </p>
         <p>
-          In our current capitalist system, the cracks of which are showing more and more, the pressure is to be an I. I
-          have a job. I make art. I think. I vote. But there are others who think that the way forward involves not the
-          singular, but the collective, or collections of people.
+          the events consist of a mixture of discussions, rehearsals, performances, games, and hangs. people are welcome
+          to watch and listen, and/or join for any of them! most events correspond to projects people have proposed for
+          the festival. please see the schedule below for details and a brief description of each project. for the
+          festival, this is an opportunity to test out ideas, experiment with pieces, and open discussions -- all of
+          which will continue during the summer portion of the festival.
         </p>
         <p>
-          But how do a collection of I’s become a we? Surely not through unification (sameness). We are all different.
-          While we might have similarities or be in agreement, there is no one unifying idea that can stand up against
-          the strength of the cultural pressure to be I. And, once there is a we, how does it maintain it’s we-ness
-          without compromising all its members?
+          <a href="https://docs.google.com/spreadsheets/d/1czD2BfkALwQyAxwigYQqBS5JvOAP34atTQDj1PaLOk8/edit?usp=sharing"
+            target="_blank"
+          >
+            SCHEDULE
+          </a>
+          ||
+          <a href="2021-season">THEME</a>
         </p>
-        <p>
-          How can we coalesce without unifying? Without rounding out the corners, without leaving behind certain
-          essential parts of our beings? How can we come together as a group of flawed humans who each would like very
-          much to ignore or leave behind said flaws? More formally, it is a question of how a heterogeneous group of
-          multiplicities can organize as a collective subject. And, in a broad sense, it is a question of how to
-          participate in change that would echo from the core of our very being. To identify this point of change is to
-          locate and incorporate that which appears undecidable and indiscernible into our world. To realize the
-          collective subject is to suggest an impossible hypothesis as true, to wager, and in wagering to radically
-          hope, on a future and world beyond this one.
-        </p>
-        <p>
-          This year at co-incidence, joined by resident artist Nina Power, we will interrogate this idea of groups, of
-          we’s. During our time together at the festival, what mirrors can we hold to ourselves that don’t just show us?
-          What might this world beyond look like and how can we experiment toward it; how can we begin to listen to that
-          which is radically unhearable?
-        </p>
-        <!--        <p><a class="" href="/faq-2020">more info can be found here</a></p>-->
-        <!--        <br/>-->
-        <!--        <br/>-->
-<!--                <hr class="tertiary">-->
-                <br>
-<!--                <h4><a class="" href="/application">Please apply here</a></h4>-->
-        <!--        <br>-->
-        <!--        <p>-->
-        <!--          applications due october 1st || results sent by october 9th-->
-        <!--        </p>-->
         <br>
         <hr class="tertiary">
-
       </div>
     </div>
   </div>
