--- a/app/views/home/sections/_notification.html.erb
+++ b/app/views/home/sections/_notification.html.erb
@@ -1,4 +1,4 @@
-<% if @penta_year %>
+<%# if @penta_year %>
   <div class="notification">
     <br/>
     <br/>
@@ -11,11 +11,12 @@
           <p class="text-faded"
              style="padding-bottom: 15px;"
           >
-            Application for <span class="reddish"><%= @penta_year.name %></span> has been successfully submitted.
-            Thanks!
+<!--            Application for <span class="reddish"><%#= @penta_year.name %></span> has been successfully submitted.-->
+<!--            Thanks!-->
+            Please checkout our updates for Co-Incidence 2021: January 14-17 <a href="#intro2021">here</a>.
           </p>
         </div>
       </div>
-    </div>h
+    </div>
   </div>
-<% end %>
+<%# end %>
