--- a/app/views/home/sections/_logos.html.erb
+++ b/app/views/home/sections/_logos.html.erb
@@ -86,20 +86,20 @@
     <div class="business-logo">
       <%= image_tag asset_url("business-logos/SAC_black300dpi.jpg") %>
     </div>
-    <div class="business-logo">
-      <%= image_tag asset_url("MCC_Logo.png") %>
-    </div>
+<!--    <div class="business-logo">-->
+      <%#= image_tag asset_url("MCC_Logo.png") %>
+<!--    </div>-->
     <div class="business-logo">
       <%= image_tag asset_url("business-logos/streetcarlogo.png") %>
     </div>
-    <div class="business-logo">
-      <%= link_to image_tag(asset_url("business-logos/Festivals_Badge.png")), "http://artsboston.org/MassFestivals", :target => "_blank" %>
-    </div>
-    <div class="business-logo">
-      <%= image_tag asset_url("business-logos/PH_logo_byline_EN_black.jpg") %>
-    </div>
-    <div class="business-logo bg-dark btn">
-      <%= image_tag asset_url("business-logos/CALARTSX_SPONSORED.png") %>
-    </div>
+<!--    <div class="business-logo">-->
+      <%#= link_to image_tag(asset_url("business-logos/Festivals_Badge.png")), "http://artsboston.org/MassFestivals", :target => "_blank" %>
+<!--    </div>-->
+<!--    <div class="business-logo">-->
+      <%#= image_tag asset_url("business-logos/PH_logo_byline_EN_black.jpg") %>
+<!--    </div>-->
+<!--    <div class="business-logo bg-dark btn">-->
+      <%#= image_tag asset_url("business-logos/CALARTSX_SPONSORED.png") %>
+<!--    </div>-->
   </div>
 </section>
