Adds piece descriptions

--- a/app/views/home/season2021.html.erb
+++ b/app/views/home/season2021.html.erb
@@ -3,6 +3,77 @@
     <div class="row text-center">
       <div class="col-md-8 col-md-offset-2">
         <h4>
+          events & descriptions (in no particular order)
+        </h4>
+        <br>
+
+        <p><b>Annelyse Gelman </b></p>
+        <p>
+          Introduction of an ongoing piece about the weather.
+
+        <hr>
+        <p><b>James Creed </b></p>
+        <p>
+          Introduction and rehearsal of various pieces, including 'The Hollies, For Example' for performance on a
+          virtual concert Sunday the 17th. Scores of pieces <a
+          href="https://onedrive.live.com/?authkey=%21AK068pAbYP4xdn0&id=90FAA35E932B46AE%217092&cid=90FAA35E932B46AE"
+          target="_blank">here</a>. Any are welcome to join or listen. </p>
+        <hr>
+
+        <p><b>James Falzone </b></p>
+        <p>
+          Introduction and rehearsal of a new piece, 'Stance and Happenstance', for virtual performance on Sunday. Any are welcome to join or listen. </p>
+        <hr>
+
+        <p><b>Cassia Streb </b></p>
+        <p>
+          Introduction and discussion of an ongoing piece based on a previous piece "The Mueller Tunnel", focusing on
+          topics of memory, and change. Any are welcome to join or listen. </p>
+        <hr>
+
+        <p><b>Nina Power </b></p>
+        <p>
+          Open discussions about various topics determined by Nina intersecting with her research, politics, the
+          festival projects, and the ethics of the festival itself.
+        </p>
+
+        <hr>
+        <p><b>Ryan Wade Ruehlen </b></p>
+        <p>
+          “The Weight Of Falling Sand” , 2021
+          Inspired by particles of dirt that fell, and quietly resonated, onto cymbals standing under air vents.
+          Ruehlen’s interest in the coalescing of manual labor and concentrated listening formed the initial experience
+          into a performance where the individual, and anyone who wishes to participate, slowly empty a sandbag onto a
+          cymbal, or resonant metal of domestic or industrial origin. Participants can fill the bag where they are able
+          to gather soil, sand, loess, ice, snow, or cement detritus.
+        </p>
+        <hr>
+        <p><b>Masaya Ozaki </b></p>
+        <p>
+          I often think about how I tend to withdraw into my own world, a monologue inside my head heard only by myself,
+          or perhaps by my closest friends, family, or community. Yet, it is just a bubble. The Internet and technology
+          had the potential to break it, but in reality the opposite happened. Social media shows us the things we want
+          to hear, we read the news that we want to believe, we follow and listen to the people that have the same
+          opinions as us. The world is getting smaller and simpler. It is considered to be efficient and good. It is
+          comfortable to listen to the opinions of people like us, but it only perpetuates division. This is an
+          experiment on breaking the bubble.
+        </p>
+        <hr>
+        <p><b>Anne LoVerso </b></p>
+        <p>
+          A group will come together to play a worldbuilding game, to design and imagine a better future. All will
+          participate in creating what this future looks like and how the story unfolds. How do we define "better"? What
+          rules do we set for ourselves? What do we do when someone disagrees - in-game or out-of-game? What do we do
+          under pressure? We won't just talk about it - we will play it out as a group collectively.
+        </p>
+        <br>
+        <br>
+        <br>
+      </div>
+    </div>
+    <div class="row text-center">
+      <div class="col-md-8 col-md-offset-2">
+        <h4>
           What does it mean to be a we?
         </h4>
         <br>
