--- a/app/views/home/sections/_intro2021.html.erb
+++ b/app/views/home/sections/_intro2021.html.erb
@@ -55,7 +55,7 @@
             SCHEDULE
           </a>
           ||
-          <a href="2021-season">THEME</a>
+          <a href="2021-season">EVENTS & SCHEDULE</a>
         </p>
         <br>
         <hr class="tertiary">
