update descr of ninas discussions

--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -176,7 +176,7 @@ h5 {
   width: 100% !important;
 }
 
-.eventUl, .faq-ul, .nope-ul {
+.eventUl, .faq-ul, .nope-ul, .mustachioli {
   list-style: none;
   padding: 0;
   margin: 0;
