--- a/app/views/home/season2021.html.erb
+++ b/app/views/home/season2021.html.erb
@@ -22,7 +22,8 @@
 
         <p><b>James Falzone </b></p>
         <p>
-          Introduction and rehearsal of a new piece, 'Stance and Happenstance', for virtual performance on Sunday. Any are welcome to join or listen. </p>
+          Introduction and rehearsal of a new piece, 'Stance and Happenstance', for virtual performance on Sunday. Any
+          are welcome to join or listen. </p>
         <hr>
 
         <p><b>Cassia Streb </b></p>
@@ -33,10 +34,24 @@
 
         <p><b>Nina Power </b></p>
         <p>
-          Open discussions about various topics determined by Nina intersecting with her research, politics, the
-          festival projects, and the ethics of the festival itself.
+          Open discussions about various topics determined by Nina:
         </p>
-
+        <ul class="mustachioli">
+          <li>
+            <i>Freedom</i> - what is freedom to you? What is the current state of play re freedom of
+            expression/association?
+          </li>
+          <li>
+            <i>Honesty</i> - must artists be honest? What is the difference between honesty and radical honesty?
+          </li>
+          <li>
+            <i>Truth</i> - is there truth to be found in this world? Are we living through postmodernism?
+          </li>
+          <li>
+            <i>Performance</i> - what is performance? Are we always performing? What is the relationship between
+            authenticity and performance?
+          </li>
+        </ul>
         <hr>
         <p><b>Ryan Wade Ruehlen </b></p>
         <p>
